# GettingStarted-unittest-with-cmake

./: .gitignore  CMakeLists.txt  Readme-vscode.md  Readme.md
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  testmain.cpp
